[package]
name = "bench-ark-curves"
version = "0.1.0"
authors = ["zhenfei <zhenfei.zhang@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { version = "0.3.0", default-features = false }
ark-std = { version = "0.3.0", default-features = false }

ark-ed-on-bls12-381 = { version = "0.3.0", default-features = false }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }

ark-ed-on-bls12-377 = { version = "0.3.0", default-features = false }
ark-bls12-377 = { version = "0.3.0", default-features = false, features = [ "curve" ] }

rand_chacha = { version = "0.3.0", default-features = false }

[dev-dependencies]
# benchmarking 
bencher = "0.1.5"
criterion = "0.3.4"

[[bench]]
name = "ark_bench"
harness = false